--- a/spring-jpa-cookbook-main/src/main/resources/application-local.properties
+++ b/spring-jpa-cookbook-main/src/main/resources/application-local.properties
@@ -1,4 +1,7 @@
-spring.profiles.include=h2-console
+server.port=9001
+logging.config=classpath:log4j2-local.xml
+
+spring.profiles.include=h2-local
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=true
